# actions

./: .copilotignore  .dockerignore  .gitignore  AGENTS.md  AI_ENVIRONMENT.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  TESTING.md  dev-setup.sh  docker-compose.yml  pyproject.toml  tox.ini  verify-test-environments.sh
.github/workflows/: ci.yml
notebooks/: test.py
src/actions_package/: __init__.py  azure_storage.py  hello.py  icechunk_utils.py  mock_data_generator.py  xarray_utils.py  zarr_utils.py
src/ice_stream/: __init__.py  blocks.py  icestream.py  mock_data_generator.py  streaming.py
tests/: conftest.py  helpers.py  test_artifacts_fixture.py  test_azure_storage.py  test_azurite_service.py  test_backup_generation.py  test_basic_imports.py  test_hello.py  test_icechunk.py  test_incremental_benchmarks.py  test_minimal_upload.py  test_mock_generator.py  test_real_azure.py  test_streaming_blocks.py  test_upload_benchmarks.py  test_xarray.py  test_zarr.py
