[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ice-stream"
version = "0.1.0"
description = "A basic skeleton Python 3.12 package with pytest support"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "azure-storage-blob>=12.19.0,<12.25.0",
    "numpy>=1.24.0",
    "xarray>=2024.1.0",
    "zarr>=3.0.0",
    "fsspec>=2024.1.0",
    "adlfs>=2024.1.0",  # Azure Data Lake filesystem for fsspec
    "icechunk>=1.0.0",
    "dask[array]>=2024.1.0",
    "netCDF4>=1.5.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",  # For parallel test execution
    "ruff>=0.1",
    "black>=23.0",  # Code formatting
    "mypy>=1.0",    # Type checking
    "numpy>=1.24.0",  # Required by tests
    "tox>=4.0",     # Testing across environments
    "psutil>=5.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
